1999-01-07  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* TkInterp.m ([TkInterp -preInitWithArgc:argv:]): Set up tclobjc_newTk
	global flag that is set by tkInit (if run).  Then, after Tk_Init,
	source tk.tcl if it is set.

1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* TkInterp.m: Include stdlib.h.
	([TkInterp -checkTkLibrary]): Use TK_LIBRARY as base path for tk.tcl
	then try secondaryPath.
	([TkInterp -preInitWithArgc:argv:]): Don't retry.  Set them from
	check{Tcl,Tk} or fail.

	* TkInterp.h: Declare checkTkLibrary.

	* TclInterp.m ([TclInterp -preInitWithArgc:argv:]): Set tcl_library
	if path is set, else raise error.
	([TclInterp -checkTclLibrary]): Don't set tcl_library here.

	* Makefile.am (tklibdir): Substitute.
	(TK_VERSION): Extract from tkConfig.sh.
	(TK_PREFIX): Extract from tkConfig.sh.
	(TK_LIBRARY): Set to $(TKPREFIX)/lib/tk$(TK_VERSION).
	(CPPFLAGS): Define TK_LIBRARY.

1998-12-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am: Add -Wno-implicit-int to OBJCFLAGS instead of
	CPPFLAGS.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CPPFLAGS): Add -Wno-implicit-int.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (REVISION): Increment.  Swarm 1.3.1 released.
	(INCLUDES): Include misc.

	* tclObjc.m (tclObjc_msgSendToClientData): Make i unsigned throughout.
	Cast argc to unsigned. 

	* TkInterp.m (StdinProc): Don't declare or define if __CYGWIN32__.

	* HashTable.m ([HashTable -read:]): Make i unsigned.

	* List.m ([List -deepen]): Likewise.
	([List -isEqual:]): Likewise.
	([List -indexOf:]): Likewise.
	([List -empty]): Likewise.
	([List -insertObject:at:]): Cast index to int.
	([List -removeObjectAt:]): Cast numElements to int.

	* objc-malloc.m: Include misc.h.  Use xmalloc, xrealloc, xcalloc,
	and XFREE instead of checking return and calling objc_fatal
	(a routine that is no longer public in libobjc.a).

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
